--- a/Prototype_Analysis_AI_Responses_to_Political_Corruption_Prompts.ipynb
+++ b/Prototype_Analysis_AI_Responses_to_Political_Corruption_Prompts.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOt4EvRmQ3U34k5zhe4q3j+",
+      "authorship_tag": "ABX9TyOMk3lHuF/evIEhraZw4YPs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -203,8 +203,9 @@
         "file_path = \"/content/Prompt and  Answer sheet - Sheet1.csv\"\n",
         "df = pd.read_csv(file_path)\n",
         "\n",
+        "# Fill in missing 'Category' values\n",
         "df['Category'] = df['Category'].fillna(method='ffill')\n",
-        "\n",
+        "# Add simple text metrics to answers\n",
         "df['Answer_Length'] = df['Answer'].str.len()\n",
         "df['Word_Count'] = df['Answer'].str.split().apply(len)\n",
         "df['Sentence_Count'] = df['Answer'].str.count(r'[.!?]')\n",
@@ -228,12 +229,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1171
+          "height": 1000
         },
         "id": "-SXyUG7Kx0OC",
         "outputId": "c84ffc6a-7865-4d56-ec54-30b7d6146bf4"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -443,7 +444,7 @@
         "df_en['Polarity'] = df_en['Answer'].apply(lambda x: TextBlob(x).sentiment.polarity)\n",
         "df_en['Subjectivity'] = df_en['Answer'].apply(lambda x: TextBlob(x).sentiment.subjectivity)\n",
         "\n",
-        "# Display results for each prompt (hide index)\n",
+        "# Display results for each prompt\n",
         "df_en_display = df_en[['Prompt_ID', 'Category', 'Polarity', 'Subjectivity']]\n",
         "df_en_display.style.hide(axis='index')\n",
         "\n"
@@ -456,7 +457,7 @@
         "id": "U_rteG84t18D",
         "outputId": "98ae91be-9eaf-41ec-9e85-0a555311e72f"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -630,24 +631,24 @@
       "metadata": {
         "id": "4utZvLBwzAQi"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "\n",
+        "# Load R extension and install Dutch sentiment analysis packages\n",
         "!apt-get install -y r-base\n"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "OsAq-D99zc9l",
         "outputId": "1192548a-c361-4fc0-8768-57295724b834"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -669,13 +670,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "YkpHlVCB3U6W",
         "outputId": "d3146dff-657f-4118-bb46-630a99d01a51"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -701,12 +701,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1110
+          "height": 1000
         },
         "id": "JXG4S3810Xv0",
         "outputId": "89478b57-bc14-46dd-f9bf-8d25a3bb86f3"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -795,12 +795,13 @@
       "metadata": {
         "id": "nVPwixL23yK4"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# Convert Python answers to R vector\n",
         "import rpy2.robjects as robjects\n",
         "from rpy2.robjects import StrVector\n",
         "\n",
@@ -809,16 +810,18 @@
       "metadata": {
         "id": "f6Tdi92734mk"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# Run Dutch sentiment analysis\n",
         "%%R\n",
         "library(DutchSentimentAnalysis)\n",
         "library(tibble)\n",
         "\n",
+        "# Return score (-2 to +2) and label (positive/neutral/negative)\n",
         "results <- tibble(\n",
         "  Answer = text,\n",
         "  Score = dutch_sentiment_analysis(text),\n",
@@ -835,7 +838,7 @@
         "id": "1rOP1o2I3870",
         "outputId": "ed181425-149c-468a-8996-dc12989b44f7"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -867,6 +870,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Import R dataframe into Python\n",
         "from rpy2.robjects import pandas2ri\n",
         "from rpy2.robjects.packages import importr\n",
         "from rpy2.robjects import r\n",
@@ -878,7 +882,7 @@
       "metadata": {
         "id": "681BIIl_79QA"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -892,30 +896,31 @@
       "metadata": {
         "id": "cI8-Wr1l8NxQ"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "\n",
+        "# Append Dutch sentiment scores to original Dutch dataframe\n",
         "df_nl = df_nl.reset_index(drop=True)\n",
         "\n",
         "df_nl['NL_Score'] = df_results_nl['Score'].values\n",
         "df_nl['NL_Label'] = df_results_nl['Label'].values\n",
         "\n",
+        "# Display summary with sentiment\n",
         "df_nl_display = df_nl[['Prompt_ID', 'Category', 'NL_Score', 'NL_Label','Prompt', 'Answer']]\n",
         "df_nl_display.style.hide(axis='index')\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1310
+          "height": 1000
         },
         "id": "xvH7Uixx8P-V",
         "outputId": "a1ee54ae-baf9-47f2-fed7-d0048bb7fd87"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1070,7 +1075,7 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
+        "# Display summary with sentiment\n",
         "df_nl_summary = df_nl[['Prompt_ID', 'Category', 'NL_Score', 'NL_Label']]\n",
         "\n",
         "df_nl_summary = df_nl_summary.sort_values(by=['Category', 'Prompt_ID']).reset_index(drop=True)\n",
@@ -1085,7 +1090,7 @@
         "id": "Q652AmL4-1ZK",
         "outputId": "c622e214-d3eb-4e70-f1b1-8dfab158757b"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1229,7 +1234,7 @@
         "id": "9R0amlZP_ttG",
         "outputId": "d0368d08-34e4-491e-b03f-d27ba0fad5a1"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1304,22 +1309,24 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
+        "# Prepare English data for merging\n",
         "df_en_clean = df_en[['Prompt_ID', 'Category', 'Polarity', 'Subjectivity']].copy()\n",
         "df_en_clean.rename(columns={'Polarity': 'Score'}, inplace=True)\n",
         "df_en_clean['Sentiment_Label'] = None\n",
         "df_en_clean['Language'] = 'English'\n",
         "\n",
+        "# Prepare Dutch data\n",
         "df_nl_clean = df_nl[['Prompt_ID', 'Category', 'NL_Score', 'NL_Label']].copy()\n",
         "df_nl_clean.rename(columns={'NL_Score': 'Score', 'NL_Label': 'Sentiment_Label'}, inplace=True)\n",
         "df_nl_clean['Subjectivity'] = None\n",
         "df_nl_clean['Language'] = 'Dutch'\n",
         "\n",
-        "\n",
+        "# Combine both for comparison\n",
         "df_combined = pd.concat([df_en_clean, df_nl_clean], ignore_index=True)\n",
         "\n",
         "df_combined = df_combined.sort_values(by=['Category', 'Prompt_ID']).reset_index(drop=True)\n",
         "\n",
+        "# Final output table\n",
         "df_combined_display = df_combined[['Prompt_ID', 'Category', 'Language', 'Score', 'Subjectivity', 'Sentiment_Label']]\n",
         "df_combined_display.style.hide(axis='index')\n"
       ],
@@ -1331,7 +1338,7 @@
         "id": "YWcogPbLAKPB",
         "outputId": "fae1c676-ebde-45bd-ba80-a4eff6a18f76"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
